# text-summarizer-rag

./: .gitignore  LICENSE  README.md  app.py  document_store.py  pyproject.toml  requirements.txt  sourceme.sh  summarizer.py
templates/: index.html
